fixed spacing issues

--- a/index.html
+++ b/index.html
@@ -23,8 +23,6 @@
         <div class="main-container">
           <div class="left-cl">
             <div class="button-back"><span><svg width="26px" height="26px" viewBox="63 67 26 26" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
-                <!-- Generator: Sketch 42 (36781) - http://www.bohemiancoding.com/sketch -->
-                <desc>Created with Sketch.</desc>
                 <defs></defs>
                 <g id="Page-1" stroke="none" stroke-width="1" fill="none" fill-rule="evenodd" transform="translate(64.400240, 68.400000)" stroke-linecap="round" stroke-linejoin="round">
                     <path d="M11.4176,0 C5.1104,0 0,5.1152 0,11.4216 C0,17.7304 5.1104,22.8392 11.4176,22.8392 C17.724,22.8392 22.8384,17.7304 22.8384,11.4216 C22.8384,5.1152 17.724,0 11.4176,0 L11.4176,0 Z" id="Stroke-1" stroke="#FFFFFF"></path>
@@ -44,8 +42,8 @@
               <button class="navy"></button>
               <button class="grey"></button>
               
-            <h4>Materials</h4>
-            <p>Body: 100% Vinyl, Lining: 100% Polyethylene.</p>
+            <h4>DESCRIPTION</h4>
+            <p>Box clutch skull bag in velvet; 3.9"H x 6.2"W x 2"D.</p>
             <button class="basket">Add to Basket</button>
           </div>
         </div>
